--- a/authentification-service.properties
+++ b/authentification-service.properties
@@ -19,5 +19,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-#app.jwtSecret=mahmoudSecretKey
-#app.jwtExpirationMs=86400000 
+app.jwtSecret=mahmoudSecretKey
+app.jwtExpirationMs=86400000 
